--- a/bower.json
+++ b/bower.json
@@ -19,8 +19,6 @@
     "angular-ui-router": "^0.3.1",
     "angular-resource": "^1.5.8",
     "angular-jwt": "^0.1.3",
-    "bootstrap": "^3.3.7",
-    "angular-moment": "^0.10.3",
-    "angularAudioRecorder": "^1.4.1"
+    "bootstrap": "^3.3.7"
   }
 }
