--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "node node_modules/bower/bin/bower install && gulp deploy"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bower": "^1.8.0",
     "express": "^4.14.0"
   },
   "devDependencies": {
@@ -31,5 +32,8 @@
     "gulp-uglify": "^2.0.0",
     "gulp-wait": "0.0.2",
     "main-bower-files": "^2.13.1"
+  },
+  "engines": {
+    "node": ">=6.x"
   }
 }
