--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "postinstall": "node node_modules/bower/bin/bower install && gulp deploy"
+    "postinstall": "bower install && gulp deploy"
   },
   "author": "",
   "license": "ISC",
